--- a/randomimage/randomimage.html
+++ b/randomimage/randomimage.html
@@ -14,7 +14,7 @@
     <div id="randomness">
       Click for a random amazing image!
     </div>
-    <a href="../images/malwaremessage.png" download>
+    <a href="../images/lovely.png" download>
       <img src="../images/clicker.png" id="clicker">
     </a>
   </body>
